HelloUltraviolet/Fixtures/RejectedSource/Expressions/ExpressionDiagnosticsSupplement/Expected.uv
//! Expected diagnostic metadata for the ExpressionDiagnosticsSupplement rejected-source specimen.

expectedDiagnostic("E-SEM-2525", "diag.16.ExpressionDiagnosticsSupplement")
